...
  @override
  Widget build(BuildContext context) {
    return GestureDetector(
      onTap: _onScaffoldTap,
      child: Scaffold(
        appBar: AppBar(
          title: const Text('Sign up'),
        ),
        body: Padding(
          padding: const EdgeInsets.symmetric(horizontal: Sizes.size36),
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.start,
            children: [
...

              Gaps.v16,

              // button
              GestureDetector(
                onTap: _onNextTap,
                child: FormButton(text: 'Next', disabled: _username.isEmpty),
              ),
            ],
          ),
        ),
      ),
    );
...
